--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@ h4,
 h5,
 h6 {
   font-weight: 400;
-  font-family: "Quattrocento Sans", sans-serif;
+  font-family: "Quattrocento Sans", sans-serif:
   color: #afbac4;
 }
 
@@ -42,12 +42,12 @@ p {
 ::-moz-selection {
   /* Code for Firefox */
   color: #fff;
-  background: #57cbcc;
+  background: #6195FF;
 }
 
 ::selection {
   color: #fff;
-  background: #57cbcc;
+  background: #6195FF;
 }
 
 ol,
@@ -106,8 +106,8 @@ a:hover {
   border: 1px solid #4e595f;
 }
 .btn-transparent:hover, .btn-transparent:focus {
-  background-color: #57cbcc;
-  border-color: #57cbcc !important;
+  background-color: #6195FF;
+  border-color: #6195FF !important;
   color: #fff;
 }
 
@@ -235,11 +235,11 @@ a:hover {
 
 a:focus,
 a:hover {
-  color: #57cbcc;
+  color: #6195FF;
 }
 
 .btn-main {
-  background: #57cbcc;
+  background: #6195FF;
   color: #fff;
   display: inline-block;
   font-size: 14px;
@@ -322,7 +322,7 @@ a:hover {
 .sk-cube-grid .sk-cube {
   width: 33%;
   height: 33%;
-  background-color: #57cbcc;
+  background-color: #6195FF;
   float: left;
   -webkit-animation: sk-cubeGridScaleDelay 1.3s infinite ease-in-out;
   animation: sk-cubeGridScaleDelay 1.3s infinite ease-in-out;
@@ -439,7 +439,7 @@ a:hover {
   font-family: "Quattrocento Sans", sans-serif;
 }
 .header-bradcrumb a:hover {
-  color: #57cbcc;
+  color: #6195FF;
 }
 
 .slick-slide {
@@ -489,7 +489,7 @@ a:hover {
   border-radius: 0 !important;
 }
 .pagination li a:focus, .pagination li a:hover, .pagination li a.active {
-  background: #57cbcc;
+  background: #6195FF;
   color: #fff;
   box-shadow: none;
 }
@@ -540,7 +540,7 @@ a:hover {
   width: 140px;
 }
 .navigation .navigation-menu li a.active {
-  color: #57cbcc !important;
+  color: #6195FF !important;
 }
 .navigation .navigation-menu a {
   padding-left: 15px !important;
@@ -550,7 +550,7 @@ a:hover {
 }
 .navigation .navigation-menu a:hover, .navigation .navigation-menu a:focus {
   background: transparent;
-  color: #57cbcc !important;
+  color: #6195FF !important;
 }
 
 .navbar-toggle {
@@ -723,7 +723,7 @@ margin-top: 20px;
   margin-bottom: 20px;
 }
 .about .block:hover {
-  border-bottom: 2px solid #57cbcc;
+  border-bottom: 2px solid #6195FF;
 }
 .about .block:hover .icon-box {
   transform: translateY(-10px);
@@ -849,12 +849,12 @@ margin-top: 20px;
 .contact-form input:hover,
 .contact-form textarea:hover,
 #contact-submit:hover {
-  border-color: #57cbcc;
+  border-color: #6195FF;
 }
 
 #contact-submit {
   border: 1px solid rgba(236, 239, 241, 0.07);
-  background: #57cbcc;
+  background: #6195FF;
   padding: 12px 0;
   width: 100%;
   margin: 0;
@@ -942,7 +942,7 @@ margin-top: 20px;
   padding: 30px 0 20px;
 }
 .price-title h3 {
-  color: #57cbcc;
+  color: #6195FF;
   margin: 0 0 10px;
   text-transform: uppercase;
 }
@@ -951,7 +951,7 @@ margin-top: 20px;
   font-weight: 400;
 }
 .price-title .value {
-  color: #57cbcc;
+  color: #6195FF;
   font-size: 30px;
 }
 
@@ -1089,12 +1089,12 @@ margin-top: 20px;
 }
 .service-2 .service-item:hover i {
   background: #fff;
-  color: #57cbcc;
+  color: #6195FF;
 }
 .service-2 .service-item i {
   font-size: 30px;
   display: inline-block;
-  background: #57cbcc none repeat scroll 0 0;
+  background: #6195FF none repeat scroll 0 0;
   border-radius: 30px;
   box-shadow: 0 5px 6px 0 rgba(0, 0, 0, 0.1);
   color: #fff;
@@ -1245,7 +1245,7 @@ h1, h2, h3, h4, h5, h6,p {
 }
 .member-photo .mask ul li a:hover {
   background-color: #fff;
-  color: #57cbcc;
+  color: #6195FF;
   border: 1px solid transparent;
 }
 
@@ -1327,7 +1327,7 @@ h1, h2, h3, h4, h5, h6,p {
 
 .owl-controls .owl-page.active span,
 .owl-controls .owl-page:hover span {
-  background-color: #57cbcc;
+  background-color: #6195FF;
   border: 2px solid transparent;
 }
 
@@ -1418,7 +1418,7 @@ h1, h2, h3, h4, h5, h6,p {
   padding: 0 20px 10px;
 }
 .post-meta a {
-  color: #57cbcc;
+  color: #6195FF;
 }
 .post-meta > span {
   color: #666;
@@ -1472,7 +1472,7 @@ h1, h2, h3, h4, h5, h6,p {
   color: #000;
 }
 .next-prev a:hover {
-  color: #57cbcc;
+  color: #6195FF;
 }
 .next-prev .prev-post i {
   margin-right: 10px;
@@ -1491,7 +1491,7 @@ h1, h2, h3, h4, h5, h6,p {
   font-size: 16px;
 }
 .social-profile ul li a i:hover {
-  color: #57cbcc;
+  color: #6195FF;
 }
 
 .comments-section {
@@ -1535,7 +1535,7 @@ h1, h2, h3, h4, h5, h6,p {
   margin-bottom: 8px;
 }
 .comment-wrap .media .media-heading a {
-  color: #57cbcc;
+  color: #6195FF;
   font-size: 13px;
 }
 .comment-wrap .media .comment-meta {
@@ -1556,7 +1556,7 @@ h1, h2, h3, h4, h5, h6,p {
 }
 .comment-reply-form input:focus, .comment-reply-form textarea:focus {
   box-shadow: none;
-  border: 1px solid #57cbcc;
+  border: 1px solid #6195FF;
 }
 .comment-reply-form textarea, .comment-reply-form .btn-main {
   height: auto;
@@ -1575,7 +1575,7 @@ h1, h2, h3, h4, h5, h6,p {
   margin-bottom: 4px;
 }
 .social-icon ul li:hover a {
-  background-color: #57cbcc;
+  background-color: #6195FF;
   transform: rotateY(0deg);
 }
 .social-icon ul li:hover a i {
@@ -1640,8 +1640,8 @@ h1, h2, h3, h4, h5, h6,p {
 }
 
 #scrollUp:hover {
-  background-color: #57cbcc;
-  border: 1px solid #57cbcc;
+  background-color: #6195FF;
+  border: 1px solid #6195FF;
 }
 
 /*=================================================================
